# accessibilizer

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  Makefile  README.md  accessibilizer  pyproject.toml
.electric-current.accessibilizer.container.6YWNP3/: id
.electric-current.accessibilizer.in-progress/: conversion-events.jsonl  request-usage.json
.electric-current.accessibilizer.in-progress/checkpoints/: provider-capability.json  region-page-1.json  source.json
.electric-current.accessibilizer.in-progress/validation/: preflight.json
.github/workflows/: ci.yml
docker/: paddle-warmup.py
docs/: implementation-plan.md
docs/adr/: 0001-target-verifiable-pdf-ua-conformance.md  0002-preserve-the-source-visual-layer.md  0003-require-review-only-when-warnings-remain.md  0025-collect-no-telemetry.md  (+24 more)
schemas/: authoring-1.0.schema.json  authoring-2.0.schema.json  conversion-events-1.0.schema.json  page-semantics-1.0.schema.json  page-semantics-1.1.schema.json  page-semantics-1.2.schema.json  recognition-1.0.schema.json  recognition-2.0.schema.json  review-record-1.0.schema.json  review-record-2.0.schema.json  review-record-3.0.schema.json
scripts/: build_sample_replay_fixture.py
testdata/: gold-review-record.yaml  one-page-semantic.json
tests/: test_checkpoint.py  test_cli.py  test_cli_acceptance.py  test_cli_help.py  test_configuration.py  test_events.py  test_gold_review_record.py  test_page.py  test_provider.py  test_provider_acceptance.py  test_recognition.py  test_review.py  test_runtime.py  test_vision_only.py  test_vision_prototype.py
(+31 files in other folders)
